(FIX) Footer and main size  on mobile

--- a/src/assets/style/responsive/mobile.css
+++ b/src/assets/style/responsive/mobile.css
@@ -3,6 +3,12 @@
         overflow-x: hidden;
     }
 
+    .main { 
+        margin-top: 50%;
+        
+        width: 70%;
+    }
+
     #imgApi {
         width: 40vh;
     }
